[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "pylattica"
description = "pylattica is a package for fast prototyping of lattice models for chemistry and materials science"
readme = "README.md"
keywords = [
    "cellular",
    "automaton",
    "lattice",
    "simulation",
    "chemistry",
    "materials",
]

license = { text = "MIT" }
authors = [{ name = "Max Gallant", email = "maxg@lbl.gov" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = '>=3.8'
dependencies = [
    'numpy >= 1.21.5',
    'matplotlib >= 3.5.1',
    'tqdm >= 4.63.0',
    'pymatgen >= 2022.3.29',
    'plotly >= 5.6.0',
    'monty >= 2022.9.9',
    'rustworkx >= 0.12.0',
    'pydantic >= 1.10.2',
    'maggma >= 0.49.5',
    'Pillow >= 9.0'
]

[project.optional-dependencies]
docs = [
    "jupyter_contrib_nbextensions>=0.7.0",
    "notebook==6.4.12",
    "mkdocs>=1.4.0",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-jupyter>=0.24.6",
    "mkdocs-section-index>=0.3.4",
    "mkdocstrings>=0.19.0",
    "mkdocstrings-python>=0.7.1",
    "pymdown-extensions>=9.6",

]
jupyter = [
    "jupyterlab>=3.4.4",
    "nbconvert<7.0.0,>=6.2.0"
]
plotting = ["graphistry==0.28.0"]
tests = ["pytest==7.1.3", "pytest-cov==4.0.0"]

[project.urls]
homepage = "https://mcgalcode.github.io/pylattica/"
documentation = "https://mcgalcode.github.io/pylattica/"
repository = "https://github.com/mcgalcode/pylattica"
changelog = "https://github.com/mcgalcode/pylattica/blob/main/docs/CHANGELOG.md"

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '\#\s*pragma: no cover',
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]

[tool.flake8]
exclude = ".git,__pycache__,tests"
max-line-length = 88
max-doc-length = 88
extend-ignore = "E741,W291,W293,E501,E231,E203,F401"
min-python-version = "3.8.0"
docstring-convention = "numpy"

[tool.isort]
profile = "black"
known_first_party = "pylattica"

[tool.pytest]
addopts = "--durations=10"
norecursedirs = "tests/helpers"


[tool.setuptools.package-data]
pylattica = ["py.typed"]

[tool.setuptools-git-versioning]
enabled = true